--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>🌸Feelora</title>
+    <title>Feelora</title>
     <link rel="icon" type="image/x-icon" href="/image/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="style.css">
